<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.aclrian.messdiener</groupId>
	<artifactId>messdienerplan-ersteller</artifactId>
	<version>b699</version>

<properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
</properties>

	<dependencies>
	<!-- JavaFx -->
	 <dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-controls</artifactId>
    <version>11.0.2</version>
  </dependency>
  <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>11.0.2</version>
        </dependency>
        <dependency>
  <groupId>org.openjfx</groupId>
  <artifactId>javafx-base</artifactId>
  <version>11.0.2</version>
</dependency>
<dependency>
  <groupId>org.openjfx</groupId>
  <artifactId>javafx-graphics</artifactId>
  <version>11.0.2</version>
</dependency>
		<!--Zum Lesen der Version von Github https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>1.1.1</version>
			<exclusions>
				<exclusion>
					<artifactId>hamcrest-core</artifactId>
					<groupId>org.hamcrest</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.jfoenix/jfoenix -->
		<dependency>
			<groupId>com.jfoenix</groupId>
			<artifactId>jfoenix</artifactId>
			<version>9.0.9</version>
		</dependency>
		<dependency>
		<!-- for email verification -->
    <groupId>commons-validator</groupId>
    <artifactId>commons-validator</artifactId>
    <version>1.4.1</version>
</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
		        <groupId>org.openjfx</groupId>
		        <artifactId>javafx-maven-plugin</artifactId>
		        <version>0.0.4</version>
		        <configuration>
		        <options>
                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
               </options>
		            <mainClass>net.aclrian.mpe.Main</mainClass>
					<commandlineArgs>-exe</commandlineArgs>
		        </configuration>

				<executions>
				<execution>
					<!-- Default configuration for running -->
					<id>default-cli</id>
					<configuration>
						<commandlineArgs>-exe</commandlineArgs>
						<mainClass>net.aclrian.mpe.Main</mainClass>
						<options>
							<option>--add-opens</option>
							<option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
						</options>
					</configuration>
				</execution>
				<execution>
					<!-- Configuration for debugging -->
					<id>debug</id>
					<configuration>
						<options>
						<!-- <option>-Xrunjdwp:transport=dt_socket,address=*8000,server=y,suspend=y</option>-->

						</options>
						<commandlineArgs>-exe</commandlineArgs>
						<mainClass>net.aclrian.mpe.Main</mainClass>
						<options>
							<option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
							<option>--add-opens</option>
							<option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
							<option>--add-opens</option>
							<option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
						</options>
					</configuration>
				</execution>
			</executions>

	    	</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>11</source>
					<target>11</target>
				</configuration>
			</plugin>
</plugins>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>
</project>